--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"buffertools": "1.1.1",
 		"config": "0.4.30",
 		"express": "3.4.x",
+		"geoip-lite": "1.1.1",
 		"hogan-express": "0.5.0",
 		"printf": "0.1.2",
 		"q": "0.9.7",
